--- a/SnakePlanet/app/src/main/AndroidManifest.xml
+++ b/SnakePlanet/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity android:name=".SearchBySpecies" >
         </activity>
 
+        <activity android:name=".SnakeLayout" >
+        </activity>
+
         <activity
             android:name=".SearchActivity"
             android:label="@string/title_activity_search" >
